# Code-Reading-Book

./: README.txt
XFree86-3.3/xc/programs/xterm/: Imakefile  Makefile.in  TekPrsTbl.c  Tekproc.c  VTPrsTbl.c  VTparse.def  VTparse.h  XTerm-col.ad  XTerm.ad  aclocal.m4  button.c  charproc.c  configure  configure.in  cursor.c  data.c  data.h  error.h  input.c  install.sh  main.c  main.h  menu.c  menu.h  misc.c  mkdirs.sh  os2main.c  proto.h  ptyx.h  resize.c  resize.man  screen.c  scrollbar.c  tabs.c  termcap  terminfo  trace.c  trace.h  ttysvr.c  util.c  (+3 more)
ace/man/: Makefile.am  windex
ace/man/man3/: ACE_ATM_Addr.3  ACE_Accept_QoS_Params.3  ACE_Accept_Strategy.3  ACE_Acceptor.3  ACE_Acquire_Method.3  ACE_Activation_Queue.3  ACE_Active_Map_Manager.3  ACE_Active_Map_Manager_Adapter.3  ACE_Active_Map_Manager_Iterator_Adapter.3  ACE_Active_Map_Manager_Key.3  ACE_Active_Map_Manager_Key__key_data.3  ACE_Active_Map_Manager_Reverse_Iterator_Adapter.3  ACE_Adaptive_Lock.3  ACE_Addr.3  ACE_Allocator.3  ACE_Allocator_Adapter.3  ACE_Arg_Shifter.3  ACE_Array.3  ACE_Array_Base.3  ACE_Array_Iterator.3  ACE_Async_Timer_Queue_Adapter.3  ACE_Asynch_Accept.3  ACE_Asynch_Accept_Impl.3  ACE_Asynch_Accept_Result_Impl.3  ACE_Asynch_Accept__Result.3  ACE_Asynch_Acceptor.3  ACE_Asynch_Operation.3  ACE_Asynch_Operation_Impl.3  ACE_Asynch_Read_Dgram.3  ACE_Asynch_Read_Dgram_Impl.3  ACE_Asynch_Read_Dgram_Result_Impl.3  ACE_Asynch_Read_Dgram__Result.3  ACE_Asynch_Read_File.3  ACE_Asynch_Read_File_Impl.3  ACE_Asynch_Read_File_Result_Impl.3  ACE_Asynch_Read_File__Result.3  ACE_Asynch_Read_Stream.3  ACE_Asynch_Read_Stream_Impl.3  ACE_Asynch_Read_Stream_Result_Impl.3  ACE_Asynch_Read_Stream__Result.3  (+978 more)
ace/netsvcs/clients/: Makefile  Makefile.am  Makefile.bor  readme
ace/netsvcs/clients/Logger/: Makefile  Makefile.am  Makefile.bor  direct_logging.cpp  indirect_logging.cpp  readme
ace/netsvcs/clients/Naming/: Makefile  Makefile.am  Makefile.bor
ace/netsvcs/clients/Tokens/: Makefile  Makefile.am  Makefile.bor  readme
ace/tao/orbsvcs/: Makefile  Makefile.am  Makefile.bor  default.bld  readme
ace/tao/orbsvcs/Concurrency_Service/: Concurrency_Service.cpp  Concurrency_Service.h  Makefile  Makefile.am  readme  svc.conf
ace/tao/orbsvcs/CosEvent_Service/: CosEvent_Service.cpp  Makefile  Makefile.am  Makefile.bor  readme
ace/tao/orbsvcs/Dump_Schedule/: Dump_Schedule.cpp  Makefile  Makefile.am
ace/tao/orbsvcs/Event_Service/: Event_Service.cpp  Event_Service.h  Makefile  Makefile.am  Makefile.bor  svc.conf
ace/tao/orbsvcs/IFR_Service/: AbstractInterfaceDef_i.cpp  AbstractInterfaceDef_i.h  AliasDef_i.cpp  AliasDef_i.h  ArrayDef_i.cpp  ArrayDef_i.h  AttributeDef_i.cpp  AttributeDef_i.h  ComponentDef_i.cpp  ComponentDef_i.h  ComponentRepository_i.cpp  ComponentRepository_i.h  ConstantDef_i.cpp  ConstantDef_i.h  ConsumesDef_i.cpp  ConsumesDef_i.h  Contained_i.cpp  Contained_i.h  Container_i.cpp  Container_i.h  EmitsDef_i.cpp  EmitsDef_i.h  EnumDef_i.cpp  EnumDef_i.h  EventDef_i.cpp  EventDef_i.h  ExceptionDef_i.cpp  ExceptionDef_i.h  FactoryDef_i.cpp  FactoryDef_i.h  FinderDef_i.cpp  FinderDef_i.h  FixedDef_i.cpp  FixedDef_i.h  HomeDef_i.cpp  HomeDef_i.h  IDLType_i.cpp  IDLType_i.h  IFR_BaseS.cpp  IFR_BaseS.h  (+115 more)
ace/tao/orbsvcs/ImplRepo_Service/: Adapter_Activator.cpp  Adapter_Activator.h  Forwarder.cpp  Forwarder.h  ImplRepo.bor  ImplRepo.cpp  ImplRepo_i.cpp  ImplRepo_i.h  Iterator.cpp  Iterator.h  Locator.cpp  Locator.h  Makefile  Makefile.am  Makefile.bor  NT_Service.cpp  NT_Service.h  Options.cpp  Options.h  Repository.cpp  Repository.h  readme.txt  tao_imr.bor  tao_imr.cpp  tao_imr_i.cpp  tao_imr_i.h
ace/tao/orbsvcs/LifeCycle_Service/: Criteria_Evaluator.cpp  Criteria_Evaluator.h  Factory_Trader.cpp  Factory_Trader.h  LifeCycle_Service.cpp  LifeCycle_Service.h  LifeCycle_Service_i.cpp  LifeCycle_Service_i.h  Makefile  Makefile.am
ace/tao/orbsvcs/LoadBalancer/: LoadBalancer.cpp  LoadBalancer.h  LoadBalancer_Service.cpp  Makefile  Makefile.bor
ace/tao/orbsvcs/Logging_Service/: Logging_Service.cpp  Logging_Service.h  Makefile  readme
ace/tao/orbsvcs/Naming_Service/: Makefile  Makefile.am  Makefile.bor  NT_Naming_Server.cpp  NT_Naming_Service.bor  NT_Naming_Service.cpp  NT_Naming_Service.h  Naming_Server.cpp  Naming_Service.bor  Naming_Service.cpp  Naming_Service.h  readme
ace/tao/orbsvcs/Notify_Service/: Makefile  Makefile.bor  Notify_Service.cpp  Notify_Service.h  readme  svc.conf
ace/tao/orbsvcs/Scheduling_Service/: Makefile  Makefile.am  Scheduling_Service.cpp  Scheduling_Service.h
ace/tao/orbsvcs/TAO_Service/: Makefile  Makefile.bor  TAO_Service.cpp  readme  svc.conf
ace/tao/orbsvcs/Time_Service/: Clerk_i.cpp  Clerk_i.h  Makefile  Makefile.am  Makefile.bor  Server_i.cpp  Server_i.h  Time_Service_Clerk.bor  Time_Service_Clerk.cpp  Time_Service_Server.bor  Time_Service_Server.cpp  readme
ace/tao/orbsvcs/Trading_Service/: Makefile  Makefile.am  Makefile.bor  Trading_Server.cpp  Trading_Service.cpp  Trading_Service.h  readme
ace/tao/orbsvcs/examples/: Makefile
ace/tao/orbsvcs/orbsvcs/: AVStreams.idl  Channel_Clients.cpp  Channel_Clients.h  Channel_Clients_T.cpp  Channel_Clients_T.h  Channel_Clients_T.i  CosConcurrency.bor  CosConcurrencyControl.idl  CosEvent.bor  CosEvent.dsp  CosEventChannelAdmin.idl  CosEventComm.idl  CosLifeCycle.bor  CosLifeCycle.idl  CosNaming.bor  CosNaming.idl  CosNaming_Static.dsp  CosNotification.bor  CosTime.bor  (+90 more)
socket/: Fork.C  Makefile.in  acconfig.h  config.h.in  configure  configure.in  echo.c  echo.h  ftp.c  ftp.h  local.h  pipestream.C  pipestream.h  protocol.c  protocol.h  sig.c  sig.h  smtp.c  smtp.h  socket++.ps  socket++.texi  sockinet.c  sockinet.h  sockstream.C  sockstream.h  sockunix.c  sockunix.h
socket/test/: Makefile.in  tbind-0.c  tbind-1.c  tcecho.c  tcftp.c  tcsmtp.c  tdinread.c  tdinwrite.C  tdunread.c  tdunwrite.C  testall.c  tfork.c  tfork0.c  thostnames.C  tnntp.c  tpipe.c  tpopen-ftp.C  tpopen-lpc.C  tpopen.c  tpopentest.C  tsecho.c  tsendfiles.C  tsig-0.c  tsinread.c  tsinwrite.C  tsmtp.c  tsockpair.C  tsunread.c  tsunwrite.C  twhois.c
(+20393 files in other folders)
