##----------------------------------------------------------------------------
##       Makefile.am,v 1.2 1999/04/07 20:53:27 othman Exp
##
##       Makefile.am for the TAO orbsvcs library
##----------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

## The number in AUTOMAKE_OPTIONS is the minimum required version automake
## needed to process this file.
AUTOMAKE_OPTIONS = 1.4

SUBDIRS = \
        orbsvcs \
        Naming_Service \
        Scheduling_Service \
        Event_Service \
        Dump_Schedule \
        Concurrency_Service \
        LifeCycle_Service \
        Trading_Service \
        Logging_Service \
        tests


