##---------------------------------------------------------------------------
##       Makefile.am,v 4.1 1999/03/20 08:06:20 othman Exp
##
##       Makefile for the Name Server test applications
##
##---------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

## The number in AUTOMAKE_OPTIONS is the minimum required version automake
## needed to process this file.
AUTOMAKE_OPTIONS = 1.4 

SUBDIRS = \
         Client \
         Dump_Restore

